[package]
name = "bitmap4rust"
version = "1.0.1"
authors = ["aditisrinivas97 <aditisrinivas97@gmail.com>"]
license = "MIT"
repository = "https://www.github.com/aditisrinivas97/bitmap4rust"
readme = "README.md"
description = "A Rust library for creating and manipulating bitmaps"
keywords = ["bitmap"]
exclude = [".DS_Store"]

[dependencies]